--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,18 @@
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+#
+# -- Created by MikBac on 29.05.2019
+#
+#
+# -- DATASOURCE
 spring.datasource.url=jdbc:postgresql://localhost:5432/root
-spring.datasource.username= postgres
-spring.datasource.password= root
+spring.datasource.username=postgres
+spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-
-spring.jpa.database = postgresql
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = create
+# -- JPA / HIBERNATE
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database=postgresql
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# -- THYMELEAF
+spring.thymeleaf.cache=true
 
