--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
     <modelVersion>4.0.0</modelVersion>
 
 
-    <groupId>group</groupId>
-    <artifactId>artifact</artifactId>
+    <groupId>com</groupId>
+    <artifactId>postgres</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
 
