--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+        </dependency>
+
     </dependencies>
 
 
